apps/llama-cpp/overlays/nishir-tailnet/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: llama-cpp
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    name: llama-cpp
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    namespace: shikanime
