apps/llama-cpp/overlays/nishir-tailnet/ui-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: llama-cpp
spec:
  gatewayClassName: llama-cpp
  listeners:
    - name: http
      port: 80
      protocol: HTTP
    - name: https
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: studio-shikanime-i-llama-cpp
            group: ""
            kind: Secret
