apps/llama-cpp/overlays/nishir-tailnet/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: llama-cpp-redirect
spec:
  hostnames:
    - chat.i.shikanime.studio
  parentRefs:
    - name: llama-cpp
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
