apps/llama-cpp/overlays/nishir-tailnet/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: llama-cpp
spec:
  defaultBackend:
    service:
      name: llama-cpp
      port:
        name: http
  ingressClassName: tailscale
  tls:
    - hosts:
        - inference
